Fix vertical alignment of `progress`
Chrome, Firefox, and Opera set `vertical-align: -0.2em`. The browser
implementations aren't great. They scale badly with font size and when
the height of the element is changed. Aligning them to the baseline, as
IE does, helps make their alignment consistent with other similar
elements.

--- a/normalize.css
+++ b/normalize.css
@@ -24,14 +24,16 @@ summary {
 }
 
 /**
- * Correct `inline-block` display not defined in IE 8/9.
+ * 1. Correct `inline-block` display not defined in IE 8/9.
+ * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
  */
 
 audio,
 canvas,
 progress,
 video {
-  display: inline-block;
+  display: inline-block; /* 1 */
+  vertical-align: baseline; /* 2 */
 }
 
 /**
